Fixing spacing.

--- a/app/assets/stylesheets/light/fields/trix_editor.css
+++ b/app/assets/stylesheets/light/fields/trix_editor.css
@@ -40,7 +40,7 @@ a[href^="bullettrain://users"], a[href^="bullettrain://teams"], span.tribute-use
       display: none;
     }
     li {
-      @apply flex items-center justify-between;
+      @apply flex items-center;
 
       span {
         font-weight: normal;
